--- a/webui_colab.ipynb
+++ b/webui_colab.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/GoodLight999/webui_colab/blob/main/webui_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "・このノートは、camenduru氏の配布しているipynbを参考にして作られています。</br>\n",
         "https://github.com/camenduru/stable-diffusion-webui-colab</br>\n",
@@ -465,7 +475,8 @@
         "6Fu3CRkUS_fl",
         "XsgqMJBr_0AT",
         "FEPfN9Dnyqx1"
-      ]
+      ],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
