Colaboratory を使用して作成しました

--- a/webui_colab.ipynb
+++ b/webui_colab.ipynb
@@ -427,17 +427,32 @@
       "source": [
         "| Loraモデル | トリガーになるプロンプト | 推奨weight |\n",
         "| - | - | - |\n",
-        "| [真理の律者](https://civitai.com/models/9101/honkai-impact-3-herrscher-of-truth) | long_hair,drill_hair, breasts, symbol-shaped_pupils, ponytail,very_long_hair,multicolored_hair,bare_shoulders,small_breasts, eyebrows_visible_through_hair, bangs, hair_between_eyes, |  |\n",
+        "| [真理の律者](https://civitai.com/models/9101/honkai-impact-3-herrscher-of-truth) | long_hair,drill_hair, breasts, symbol-shaped_pupils, ponytail,very_long_hair,multicolored_hair,</br>bare_shoulders,small_breasts, eyebrows_visible_through_hair, bangs, hair_between_eyes, |  |\n",
         "| [LightningVFX](https://civitai.com/models/10222/lightningvfx-create-more-consistent-lightning) | \\<lora:lightningvfxv1:0.2\\> |  |\n",
-        "| Bondage Suspension | suspension, ball gag, arms behind back |  |\n",
-        "| Milking machine | milking machine, lactation, nipples, leaning forward, |  |\n",
         "| [Manhattan Cafe (umamusume)](https://civitai.com/models/7607/manhattan-cafe-umamusume) | manhattan cafe \\(umamusume\\), white ahoge, black long hair</br>Racing competition clothes :black coat, black shirt, black skirt, yellow necktie | 0.5~0.65 |\n",
-        "| [Vibrator](https://civitai.com/models/10820/vibrator) | vibrator on nipple, vibrator under clothes, vibrator in thighhighs, vibrator cord, egg vibrator, tape |  |\n",
-        "| [Esthetic Futanari + Trap](https://civitai.com/models/7327/esthetic-futanari-trap-v37) | penis, futanari, otoko no ko, female focus, small penis, large penis (carefully, but work), medium penis|  |\n",
         "| [Silence Suzuka (umamusume)](https://civitai.com/models/11415/silence-suzuka-umamusume)</br>NOT COMPATIBLE WITH AOM3A2, AOM3A3 model. | silence suzuka \\(umamusume\\)</br>black gloves, white skirt, pleated skirt, black pantyhose, layered sleeves, puffy short sleeves, short over long sleeves, black bow, mismatched footwear, asymmetrical footwear</br>(optional) smile. she is serious when running</br> | 0.7~1.0 |"
       ],
       "metadata": {
         "id": "DHJKpkhd3Lam"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<details>\n",
+        "  <summary>R-18のLoRA</summary>\n",
+        "\n",
+        "  | Loraモデル | トリガーになるプロンプト | 推奨weight |\n",
+        "  | - | - | - |\n",
+        "  | [Bondage Suspension](https://civitai.com/models/8762/bondage-suspension) | suspension, ball gag, arms behind back |  |\n",
+        "  | [Milking machine](https://civitai.com/models/8500/milking-machine) | milking machine, lactation, nipples, leaning forward, |  |\n",
+        "  | [Vibrator](https://civitai.com/models/10820/vibrator) | vibrator on nipple, vibrator under clothes, vibrator in thighhighs, vibrator cord, egg vibrator, tape |  |\n",
+        "  | [Esthetic Futanari + Trap](https://civitai.com/models/7327/esthetic-futanari-trap-v37) | penis, futanari, otoko no ko, female focus, small penis, large penis (carefully, but work), medium penis|  |\n",
+        "  \n",
+        "</details>"
+      ],
+      "metadata": {
+        "id": "TdrZBN9nKp6H"
       }
     },
     {
