AbyssOrangeMix3のmodel配布URLの変更に対応しました

--- a/webui_colab.ipynb
+++ b/webui_colab.ipynb
@@ -27,8 +27,8 @@
         "と設定したあと</br>\n",
         "**ランタイム　→全てのセルを実行**</br>\n",
         "を押すだけで動きます！</br>\n",
-        "起動にはけっこう時間がかかります。8分近くかかるかも……\n",
-        "PC推奨ですが、Googleのサーバーを使うので　スマホからでも動かせます。使いにくいですが……"
+        "起動にはけっこう時間がかかります。8分近くかかるかも……</br>\n",
+        "PC推奨です。処理はGoogleのサーバーを借りて行うので、一応スマホからでも動かせます。ちょっと使いにくいけどね。"
       ],
       "metadata": {
         "id": "f4jlfo-Qn9iM"
@@ -47,7 +47,20 @@
         "!apt-get -y install -qq aria2\n",
         "\n",
         "# xformers(画像生成高速化の仕組み)を準備\n",
-        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.16/xformers-0.0.16+814314d.d20230118-cp38-cp38-linux_x86_64.whl\n",
+        "import os\n",
+        "from google.colab.output import eval_js\n",
+        "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
+        "\n",
+        "!wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
+        "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/google-perftools_2.5-2.2ubuntu3_all.deb\n",
+        "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libtcmalloc-minimal4_2.5-2.2ubuntu3_amd64.deb\n",
+        "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libgoogle-perftools4_2.5-2.2ubuntu3_amd64.deb\n",
+        "!apt install -qq libunwind8-dev\n",
+        "!dpkg -i *.deb\n",
+        "%env LD_PRELOAD=libtcmalloc.so\n",
+        "!rm *.deb\n",
+        "\n",
+        "!pip install -q --pre xformers\n",
         "!pip install -q --pre triton"
       ]
     },
@@ -56,7 +69,7 @@
       "source": [
         "#@title webuiの準備\n",
         "# webuiを連れてくる\n",
-        "!git clone https://github.com/camenduru/stable-diffusion-webui\n",
+        "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
         "\n",
         "!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py -O /content/stable-diffusion-webui/scripts/run_n_times.py"
       ],
@@ -103,7 +116,9 @@
         "!wget https://otologic.jp/sounds/se/pre/Accent03-1.mp3 -O /content/stable-diffusion-webui/notification.mp3\n",
         "\n",
         "# ディレクトリを移動\n",
-        "%cd /content/stable-diffusion-webui"
+        "%cd /content/stable-diffusion-webui\n",
+        "\n",
+        "!git reset --hard"
       ],
       "metadata": {
         "id": "l_AxgumIksCK"
@@ -124,10 +139,11 @@
         "# AbyssOrangeMix2\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix2/AbyssOrangeMix2_hard.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AbyssOrangeMix2_hard.safetensors\n",
         "# AbyssOrangeMix3\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3.safetensors\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A1.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3A1_Flat,animelike,.safetensors\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A2.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3A2_Artistic,Oil_paintings_like.safetensors\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A3.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3A3_Midpoint_of_Artistic_and_Kawaii.safetensors\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3_orangemixs.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3.safetensors\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A1_orangemixs.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3A1_Flat,animelike.safetensors\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A1B_orangemixs.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3A1B_illustration_between_A1andA3.safetensors\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A2_orangemixs.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3A2_Artistic,Oil_paintings_like.safetensors\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A3_orangemixs.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AOM3A3_Midpoint_of_Artistic_and_Kawaii.safetensors\n",
         "# AbyssOrangeMix用VAE\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt -d /content/stable-diffusion-webui/models/VAE -o OrangeMix.vae.pt\n",
         "\n",
@@ -152,7 +168,7 @@
         "# Waifu Diffusion \n",
         "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o wd15-beta1-fp16.safetensors\n",
         "# !wget https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-fp16.yaml -O /content/stable-diffusion-webui/models/Stable-diffusionwd15-beta1-fp16.yaml.mp3\n",
-        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o kl-f8-anime2.vae.pt"
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o kl-f8-anime2.vae.pt"
       ],
       "metadata": {
         "id": "8lcMqrlElELl"
@@ -220,7 +236,7 @@
         "with open(\"config.json\", \"w\") as f:\n",
         "    json.dump(config, f)\n",
         "\n",
-        "# 起動！！！\n",
+        "# 起動！！！ --no-half-vae\n",
         "!python launch.py --share --xformers --no-half-vae --enable-insecure-extension-access --gradio-queue"
       ],
       "metadata": {
@@ -263,8 +279,9 @@
         "# **導入モデルの簡易紹介**</br>\n",
         "モデルの配布リンク先を見れば、プロンプトや使用Samplerが載ってる作例が見れるので、見てみてね。</br></br>\n",
         "**Stable Diffusion**</br>\n",
-        "最も有名な画像生成AIの1つにして、様々なイラスト生成AIの大本になっている、Stable Diffusionの最新版モデル。</br>\n",
-        "プロンプトの書き方が、以下に記されているアニメ調イラストを生成するモデルたちと違うので注意が必要。</br>\n",
+        "最も有名な画像生成AIの1つにして、様々な画像生成AIの大本になっている、Stable Diffusionの最新版モデル。</br>\n",
+        "リアル画像に強く、アニメ調イラストは弱い。。</br>\n",
+        "プロンプトの書き方が、以下に記されているアニメ調イラストの生成に特化したモデルたちと違うので注意が必要。</br>\n",
         "解説サイト↓</br>\n",
         "https://webbigdata.jp/post-14827/</br>\n",
         "</br>\n",
