https://github.com/camenduru/sd-webui-tunnels を導入し、動作の安定性を向上させた また、一部の文章を修正した

--- a/webui_colab.ipynb
+++ b/webui_colab.ipynb
@@ -18,8 +18,10 @@
         "</br>\n",
         "・権利者に無断で、画像生成AIにイラストを学習させる行為は、日本の著作権法30条の4第2号に則って完全に**合法**です。また、拡散モデルによる画像生成は、ニューラルネットを用いたノイズ除去が元になっており、**イラストのコラージュからは程遠い手法**です。しかしそれはそれとして**不快に思うイラストレーター**は居ます。</br>\n",
         "また、そういった一部の人の気持ちを気にしなくとも、現在のアニメ調イラスト生成モデルには、NovelAIから**不正流出したデータを元に作られている限りなく黒に近いモデルが氾濫しているという非常に大きな問題**があります。</br>\n",
-        "加えてanbooruという英語による丁寧なタグ付けがなされた**イラスト転載サイトを学習元に使っているモデルも多い**です。法的にはクリーンなWaifu Diffusion もこの問題からは逃れられません。</br>\n",
-        "danbooru自体は、転載元をしっかり掲載したうえで画像を詳細にタグ付けしている非営利のサイトで、米国法で無断転載が合法となる**フェアユース**規定(Google画像検索も無断転載を検索結果に表示しているがそれが合法な理由)に則ろうとしている(比較的)誠実な転載サイトではあります。でも、無断であることに不快感を覚えるイラストレーターが居るのは事実。</br>\n",
+        "加えて、danbooruという英語による丁寧なタグ付けがなされた**イラスト転載サイトを学習元に使っているモデルも多い**です。法的にはクリーンなWaifu Diffusion もこの問題からは逃れられません。</br>\n",
+        "danbooru自体は、転載元をしっかり掲載したうえで画像を詳細にタグ付けしている非営利のサイトで、米国法で無断転載が合法となる**フェアユース**規定に則ろうとしている(比較的)誠実な転載サイトではあります。</br>\n",
+        "　(フェアユースの例：Google画像検索の検索結果には、無断転載された画像が多数並んでいるが、合法とされている)</br>\n",
+        "でも、無断転載であることに不快感を覚えるイラストレーターが居るのは事実。</br>\n",
         "こういったことを念頭に置いて、画像を生成しましょう。</br>\n",
         "</br>\n",
         "・たぶん、</br>\n",
@@ -28,7 +30,7 @@
         "**ランタイム　→全てのセルを実行**</br>\n",
         "を押すだけで動きます！</br>\n",
         "起動にはけっこう時間がかかります。8分近くかかるかも……</br>\n",
-        "PC推奨です。処理はGoogleのサーバーを借りて行うので、一応スマホからでも動かせます。ちょっと使いにくいけどね。"
+        "PC推奨です。処理はGoogleのサーバーを借りて行うので、一応スマホからでも動かせはします。ちょっと使いにくいけどね。"
       ],
       "metadata": {
         "id": "f4jlfo-Qn9iM"
@@ -44,13 +46,14 @@
       "source": [
         "#@title 起動準備\n",
         "# aria2(超高速ダウンロードを並列化で実現する仕組み)を導入\n",
-        "!apt-get -y install -qq aria2\n",
+        "!apt -y install -qq aria2\n",
         "\n",
         "# xformers(画像生成高速化の仕組み)を準備\n",
         "import os\n",
         "from google.colab.output import eval_js\n",
         "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
         "\n",
+        "!apt -y update -qq\n",
         "!wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
         "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/google-perftools_2.5-2.2ubuntu3_all.deb\n",
         "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libtcmalloc-minimal4_2.5-2.2ubuntu3_amd64.deb\n",
@@ -60,6 +63,7 @@
         "%env LD_PRELOAD=libtcmalloc.so\n",
         "!rm *.deb\n",
         "\n",
+        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.17/xformers-0.0.17+b6be33a.d20230315-cp39-cp39-linux_x86_64.whl\n",
         "!pip install -q --pre xformers\n",
         "!pip install -q --pre triton"
       ]
@@ -99,6 +103,9 @@
         "!git clone https://github.com/fkunn1326/openpose-editor.git /content/stable-diffusion-webui/extensions/openpose-editor\n",
         "# 日本語化\n",
         "# !git clone  https://github.com/Katsuyuki-Karasawa/stable-diffusion-webui-localization-ja_JP /content/stable-diffusion-webui/extensions/stable-diffusion-webui-localization-ja_JP\n",
+        "# sd-webui-tunnels\n",
+        "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
+        "\n",
         "\n",
         "# EasyNegative\n",
         "!wget -P /content/stable-diffusion-webui/embeddings https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.safetensors\n",
@@ -131,10 +138,10 @@
       "source": [
         "#@title  modelとVAEのダウンロード\n",
         "# Stable Diffusion\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/stable-diffusion-2-1/resolve/main/v2-1_768-ema-pruned.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o v2-1_768-ema-pruned.ckpt\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/stable-diffusion-2-1/raw/main/v2-inference-v.yaml -d /content/stable-diffusion-webui/models/Stable-diffusion -o v2-1_768-ema-pruned.yaml\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/joachimsallstrom/Double-Exposure-Embedding/resolve/main/dblx.pt -d /content/stable-diffusion-webui/embeddings -o dblx.pt\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Conflictx/AnimeScreencap/resolve/main/AnimeScreenCap.pt -d /content/stable-diffusion-webui/embeddings -o AnimeScreenCap.pt\n",
+        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/stable-diffusion-2-1/resolve/main/v2-1_768-ema-pruned.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o v2-1_768-ema-pruned.ckpt\n",
+        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/stable-diffusion-2-1/raw/main/v2-inference-v.yaml -d /content/stable-diffusion-webui/models/Stable-diffusion -o v2-1_768-ema-pruned.yaml\n",
+        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/joachimsallstrom/Double-Exposure-Embedding/resolve/main/dblx.pt -d /content/stable-diffusion-webui/embeddings -o dblx.pt\n",
+        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Conflictx/AnimeScreencap/resolve/main/AnimeScreenCap.pt -d /content/stable-diffusion-webui/embeddings -o AnimeScreenCap.pt\n",
         "\n",
         "# AbyssOrangeMix2\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix2/AbyssOrangeMix2_hard.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o AbyssOrangeMix2_hard.safetensors\n",
@@ -152,18 +159,21 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/gsdf/Counterfeit-V2.5/resolve/main/Counterfeit-V2.5.vae.pt -d /content/stable-diffusion-webui/models/VAE -o Counterfeit-V2.5.vae.pt\n",
         "\n",
         "# Grapefruit\n",
-        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/9000 -d /content/stable-diffusion-webui/models/Stable-diffusion -o grapefruitHentaiModel_VAE_not_required.safetensors\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/9000 -d /content/stable-diffusion-webui/models/Stable-diffusion -o grapefruitHentaiModel_VAE_not_required.safetensors\n",
+        "\n",
+        "# Anything-V4.5\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.5-pruned-fp16.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o Anythingv4.5.ckpt\n",
         "\n",
         "# Pastel-Mix\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/pastel-mix/resolve/main/pastelmix-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o pastelmix-fp16.safetensors\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/pastel-mix/resolve/main/pastel-waifu-diffusion.vae.pt -d /content/stable-diffusion-webui/models/VAE -o pastelmix-fp16.vae.pt\n",
+        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/pastel-mix/resolve/main/pastelmix-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o pastelmix-fp16.safetensors\n",
+        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/pastel-mix/resolve/main/pastel-waifu-diffusion.vae.pt -d /content/stable-diffusion-webui/models/VAE -o pastelmix-fp16.vae.pt\n",
         "\n",
         "# SukiyakiMix\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Vsukiyaki/SukiyakiMix-v1.0/resolve/main/SukiyakiMix-v1.0-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o SukiyakiMix-fp16.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt -d /content/stable-diffusion-webui/models/VAE -o SukiyakiMix-fp16.vae.pt\n",
         "\n",
         "# 7th_Layer\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v3/7th_anime_v3_B.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o 7th_anime_v3_B.safetensors\n",
+        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v3/7th_anime_v3_B.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o 7th_anime_v3_B.safetensors\n",
         "\n",
         "# Waifu Diffusion \n",
         "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o wd15-beta1-fp16.safetensors\n",
@@ -194,11 +204,12 @@
         "# Vibrator\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/12843 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o Vibrator.safetensors\n",
         "# Esthetic Futanari + Trap\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/OneRing/TP3.7.safetensors/resolve/main/TP3.7.safetensors -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o Futanari_Trap.safetensors\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/17951 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o Futanari_Trap.safetensors\n",
         "# Silence Suzuka (umamusume)\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/13513 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o Silence_Suzuka.safetensors\n",
         "\n",
         "# ControlNetが使えるように、ファイルをダウンロード\n",
+        "\"\"\"\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o control_canny-fp16.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o control_depth-fp16.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o control_hed-fp16.safetensors\n",
@@ -213,7 +224,8 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/mlsd_large_512_fp32.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/mlsd -o mlsd_large_512_fp32.pth\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/mlsd_tiny_512_fp32.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/mlsd -o mlsd_tiny_512_fp32.pth\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/network-bsds500.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/hed -o network-bsds500.pth\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/upernet_global_small.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/uniformer -o upernet_global_small.pth"
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/upernet_global_small.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/uniformer -o upernet_global_small.pth\n",
+        "\"\"\""
       ],
       "metadata": {
         "id": "wRwDi5yKl6Hp"
@@ -224,8 +236,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title  起動！</br>(辛抱強く5分位待つと、https://?????.gradio.liveみたいなリンクが表示されるので、それをクリックして下さい。)</br>(閉じるときは、ランタイム→ランタイムを接続解除して削除。)\n",
-        "!sed -i -e '''/prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
+        "#@title  起動！</br>(辛抱強く5分位待つと、行の最後にhttps://???.trycloudflare.comみたいなリンクが表示されるので、それをクリックして下さい。)</br>(閉じるときは、ランタイム→ランタイムを接続解除して削除。)\n",
+        "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
         "\n",
         "# 設定を予め変更する\n",
         "import json\n",
@@ -237,7 +249,7 @@
         "    json.dump(config, f)\n",
         "\n",
         "# 起動！！！ --no-half-vae\n",
-        "!python launch.py --share --xformers --no-half-vae --enable-insecure-extension-access --gradio-queue"
+        "!python launch.py --share --xformers --no-half-vae --enable-insecure-extension-access --gradio-queue --multiple"
       ],
       "metadata": {
         "id": "3mqUetLEloww"
@@ -464,7 +476,7 @@
         "  | [Bondage Suspension](https://civitai.com/models/8762/bondage-suspension) | suspension, ball gag, arms behind back |  |\n",
         "  | [Milking machine](https://civitai.com/models/8500/milking-machine) | milking machine, lactation, nipples, leaning forward, |  |\n",
         "  | [Vibrator](https://civitai.com/models/10820/vibrator) | vibrator on nipple, vibrator under clothes, vibrator in thighhighs, vibrator cord, egg vibrator, tape |  |\n",
-        "  | [Esthetic Futanari + Trap](https://civitai.com/models/7327/esthetic-futanari-trap-v37) | penis, futanari, otoko no ko, female focus, small penis, large penis (carefully, but work), medium penis|  |\n",
+        "  | [Esthetic Futanari + Trap](https://civitai.com/models/7327/esthetic-futanari-trap-v37) | penis, futanari, otoko no ko, female focus, small penis, large penis (carefully, but work), medium penis| 0.3-.0.6, 0.7 |\n",
         "  \n",
         "</details>"
       ],
