multidiffusion-upscaler-for-automatic1111を導入

--- a/webui_colab.ipynb
+++ b/webui_colab.ipynb
@@ -17,9 +17,9 @@
         "https://github.com/camenduru/stable-diffusion-webui-colab</br>\n",
         "</br>\n",
         "・権利者に無断で、画像生成AIにイラストを学習させる行為は、日本の著作権法30条の4第2号に則って完全に**合法**です。また、拡散モデルによる画像生成は、ニューラルネットを用いたノイズ除去が元になっており、**イラストのコラージュからは程遠い手法**です。しかしそれはそれとして**不快に思うイラストレーター**は居ます。</br>\n",
-        "また、そういった一部の人の気持ちを気にしなくとも、現在のアニメ調イラスト生成モデルには、NovelAIから**不正流出したデータを元に作られている限りなく黒に近いモデルが氾濫しているという非常に大きな問題**があります。</br>\n",
+        "また、そういった一部の人の気持ちを気にしなくとも、現在の高品質なアニメ調イラスト生成モデルには、NovelAIから**不正流出したデータを元に作られている限りなく黒に近いモデルが氾濫しているという非常に大きな問題**があります。</br>\n",
         "加えて、danbooruという英語による丁寧なタグ付けがなされた**イラスト転載サイトを学習元に使っているモデルも多い**です。法的にはクリーンなWaifu Diffusion もこの問題からは逃れられません。</br>\n",
-        "danbooru自体は、転載元をしっかり掲載したうえで画像を詳細にタグ付けしている非営利のサイトで、米国法で無断転載が合法となる**フェアユース**規定に則ろうとしている(比較的)誠実な転載サイトではあります。</br>\n",
+        "danbooru自体は、転載元をしっかり掲載したうえで画像を詳細にタグ付けしている非営利のサイトで、米国法で無断転載が合法となるフェアユース規定に則ろうとしている(比較的)誠実な転載サイトではあります。</br>\n",
         "　(フェアユースの例：Google画像検索の検索結果には、無断転載された画像が多数並んでいるが、合法とされている)</br>\n",
         "でも、無断転載であることに不快感を覚えるイラストレーターが居るのは事実。</br>\n",
         "こういったことを念頭に置いて、画像を生成しましょう。</br>\n",
@@ -30,7 +30,8 @@
         "**ランタイム　→全てのセルを実行**</br>\n",
         "を押すだけで動きます！</br>\n",
         "起動にはけっこう時間がかかります。8分近くかかるかも……</br>\n",
-        "PC推奨です。処理はGoogleのサーバーを借りて行うので、一応スマホからでも動かせはします。ちょっと使いにくいけどね。"
+        "PC推奨です。処理はGoogleのサーバーを借りて行うので、一応スマホからでも動かせはします。ちょっと使いにくいけどね。</br>\n",
+        "加えて、長時間使っていると、強制的に切断させられます。無料だから仕方がないね。"
       ],
       "metadata": {
         "id": "f4jlfo-Qn9iM"
@@ -40,7 +41,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SaAJk33ppFw1"
+        "id": "SaAJk33ppFw1",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -48,7 +50,7 @@
         "# aria2(超高速ダウンロードを並列化で実現する仕組み)を導入\n",
         "!apt -y install -qq aria2\n",
         "\n",
-        "# xformers(画像生成高速化の仕組み)を準備\n",
+        "# 画像生成高速化の仕組みを準備\n",
         "import os\n",
         "from google.colab.output import eval_js\n",
         "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
@@ -78,7 +80,8 @@
         "!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py -O /content/stable-diffusion-webui/scripts/run_n_times.py"
       ],
       "metadata": {
-        "id": "iG5RVHV6kfo-"
+        "id": "iG5RVHV6kfo-",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -90,7 +93,7 @@
         "# image briwser\n",
         "!git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "# civitai browser\n",
-        "!git clone https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
+        "# !git clone https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
         "# additional networks(for LoRA)\n",
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
         "# tag complete\n",
@@ -105,6 +108,8 @@
         "# !git clone  https://github.com/Katsuyuki-Karasawa/stable-diffusion-webui-localization-ja_JP /content/stable-diffusion-webui/extensions/stable-diffusion-webui-localization-ja_JP\n",
         "# sd-webui-tunnels\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
+        "# multidiffusion-upscaler-for-automatic1111\n",
+        "!git clone https://github.com/pkuliyi2015/multidiffusion-upscaler-for-automatic1111 /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "\n",
         "\n",
         "# EasyNegative\n",
@@ -161,9 +166,6 @@
         "# Grapefruit\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/9000 -d /content/stable-diffusion-webui/models/Stable-diffusion -o grapefruitHentaiModel_VAE_not_required.safetensors\n",
         "\n",
-        "# Anything-V4.5\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.5-pruned-fp16.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o Anythingv4.5.ckpt\n",
-        "\n",
         "# Pastel-Mix\n",
         "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/pastel-mix/resolve/main/pastelmix-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o pastelmix-fp16.safetensors\n",
         "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/andite/pastel-mix/resolve/main/pastel-waifu-diffusion.vae.pt -d /content/stable-diffusion-webui/models/VAE -o pastelmix-fp16.vae.pt\n",
@@ -172,8 +174,8 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Vsukiyaki/SukiyakiMix-v1.0/resolve/main/SukiyakiMix-v1.0-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o SukiyakiMix-fp16.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt -d /content/stable-diffusion-webui/models/VAE -o SukiyakiMix-fp16.vae.pt\n",
         "\n",
-        "# 7th_Layer\n",
-        "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v3/7th_anime_v3_B.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o 7th_anime_v3_B.safetensors\n",
+        "# Defmix-v2.0\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Defpoint/Defmix-v2.0/resolve/main/Defmix-v2.0.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o Defmix-v2.0.safetensors\n",
         "\n",
         "# Waifu Diffusion \n",
         "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-fp16.safetensors -d /content/stable-diffusion-webui/models/Stable-diffusion -o wd15-beta1-fp16.safetensors\n",
@@ -181,7 +183,8 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o kl-f8-anime2.vae.pt"
       ],
       "metadata": {
-        "id": "8lcMqrlElELl"
+        "id": "8lcMqrlElELl",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -228,7 +231,8 @@
         "\"\"\""
       ],
       "metadata": {
-        "id": "wRwDi5yKl6Hp"
+        "id": "wRwDi5yKl6Hp",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -236,8 +240,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title  起動！</br>(辛抱強く5分位待つと、行の最後にhttps://???.trycloudflare.comみたいなリンクが表示されるので、それをクリックして下さい。)</br>(閉じるときは、ランタイム→ランタイムを接続解除して削除。)\n",
+        "#@title  起動！</br>(辛抱強く5分位待つと、最後から1つ前の行にhttps://??????????.remote.moeみたいなリンクが表示されるので、それをクリックして下さい。)</br>(閉じるときは、ランタイム→ランタイムを接続解除して削除。)\n",
         "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
+        "!sed -i -e 's/fastapi==0.90.1/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
         "\n",
         "# 設定を予め変更する\n",
         "import json\n",
@@ -249,7 +254,7 @@
         "    json.dump(config, f)\n",
         "\n",
         "# 起動！！！ --no-half-vae\n",
-        "!python launch.py --share --xformers --no-half-vae --enable-insecure-extension-access --gradio-queue --multiple"
+        "!python launch.py --listen --xformers --no-half-vae --enable-insecure-extension-access --gradio-queue --multiple"
       ],
       "metadata": {
         "id": "3mqUetLEloww"
@@ -292,7 +297,7 @@
         "モデルの配布リンク先を見れば、プロンプトや使用Samplerが載ってる作例が見れるので、見てみてね。</br></br>\n",
         "**Stable Diffusion**</br>\n",
         "最も有名な画像生成AIの1つにして、様々な画像生成AIの大本になっている、Stable Diffusionの最新版モデル。</br>\n",
-        "リアル画像に強く、アニメ調イラストは弱い。。</br>\n",
+        "リアル画像に強く、アニメ調イラストは弱い。</br>\n",
         "プロンプトの書き方が、以下に記されているアニメ調イラストの生成に特化したモデルたちと違うので注意が必要。</br>\n",
         "解説サイト↓</br>\n",
         "https://webbigdata.jp/post-14827/</br>\n",
@@ -300,7 +305,7 @@
         "**AbyssOrangeMix**：流行ってるモデル。AOM3系が最新。</br>\n",
         "ややAI臭いが美麗。</br>\n",
         "R-18も可能。</br>\n",
-        "(このモデルだけ、VAEを自分で選択してもらう必要があるから、注意!)</br>\n",
+        "(このモデルは、VAEを自分で選択してもらう必要があるから、注意!)</br>\n",
         "推奨Negative：(worst quality, low quality:1.4), (realistic, lip, nose, tooth, rouge, lipstick, eyeshadow:1.0), (dusty sunbeams:1.0),, (abs, muscular, rib:1.0), (depth of field, bokeh, blurry:1.4), (greyscale, monochrome:1.0), text, title, logo, signature</br>\n",
         "推奨Sampler：DPM++ SDE Karras</br>\n",
         "https://huggingface.co/WarriorMama777/OrangeMixs</br>\n",
@@ -457,7 +462,7 @@
         "| Loraモデル | トリガーになるプロンプト | 推奨weight |\n",
         "| - | - | - |\n",
         "| [真理の律者](https://civitai.com/models/9101/honkai-impact-3-herrscher-of-truth) | long_hair,drill_hair, breasts, symbol-shaped_pupils, ponytail,very_long_hair,multicolored_hair,</br>bare_shoulders,small_breasts, eyebrows_visible_through_hair, bangs, hair_between_eyes, |  |\n",
-        "| [LightningVFX](https://civitai.com/models/10222/lightningvfx-create-more-consistent-lightning) | \\<lora:lightningvfxv1:0.2\\> |  |\n",
+        "| [LightningVFX](https://civitai.com/models/10222/lightningvfx-create-more-consistent-lightning) | Shooting lightning from his hands, Holding a lightning ball in his hand, Surrounded by lighting, Lightning glowing, Tiny spark lightning, </br>Particle glow , Intricate line of purple lightning , Rays straight line , Bloom , Particle lightning , Lightning bolts , Lightning bolt sword in hand </br>Purple/network/blue/yellow lightning | 0.2 |\n",
         "| [Manhattan Cafe (umamusume)](https://civitai.com/models/7607/manhattan-cafe-umamusume) | manhattan cafe \\(umamusume\\), white ahoge, black long hair</br>Racing competition clothes :black coat, black shirt, black skirt, yellow necktie | 0.5~0.65 |\n",
         "| [Silence Suzuka (umamusume)](https://civitai.com/models/11415/silence-suzuka-umamusume)</br>NOT COMPATIBLE WITH AOM3A2, AOM3A3 model. | silence suzuka \\(umamusume\\)</br>black gloves, white skirt, pleated skirt, black pantyhose, layered sleeves, puffy short sleeves, short over long sleeves, black bow, mismatched footwear, asymmetrical footwear</br>(optional) smile. she is serious when running</br> | 0.7~1.0 |"
       ],
